add rows and columns

--- a/vacation.html
+++ b/vacation.html
@@ -11,18 +11,19 @@
       </div>
 
       <blockquote>
-      <h4>
+      <h4 class="text-center">
       The Raja Ampat Islands are an Indonesian archipelago off the northwest tip of Bird’s Head Peninsula in West Papua. </h4></blockquote>
 
 
       <div class="panel panel-success">
         <div class="panel-heading">
-          <p class="text-center">
+          <p class="text-center text-danger">
             Far from the view-blocking skyscrapers, dense and hectic concrete jungles, congested traffics, flickering electric billboards, endless annoying noises, and all the nuisances of modern cities, you will find a pristine paradise where Mother Nature and warm friendly people welcome you with all the exceptional wonders in Raja Ampat, the islands-regency in West Papua Province. With all the spectacular wonders above and beyond its waters, as well as on land and amidst the thick jungles, this is truly the place where words such as beautiful, enchanting, magnificent, and fascinating gets its true physical meaning.
           </p>
         </div>
       </div>
-
+      <div class="row">
+      <div class="col-md-6">
       <div class="panel panel-info">
         <div class="panel-heading">
           <h3>How Do You Get To Raja Ampat?</h3>
@@ -36,7 +37,9 @@
             </ul>
           </div>
       </div>
+    </div>
 
+    <div class="col-md-6">
       <div class="panel panel-info">
         <div class="panel-heading">
           <h3>Things To Do In Raja Ampat</h3>
@@ -50,6 +53,8 @@
           </ul>
         </div>
       </div>
+      </div>
+    </div>
 
       <div class="panel panel-info">
         <div class="panel-heading">
@@ -77,12 +82,13 @@
         </div>
       </div>
 
-
-
-
-
-
-
+      <div class="row">
+        <div class="col-md-5 text-right pull-right">
+          <blockquote>
+            <p>"One of the best place I have ever visited" - lalala</p>
+          </blockquote>
+        </div>
+      </div>
 
 
 
