--- a/vacation.html
+++ b/vacation.html
@@ -3,6 +3,7 @@
   <head>
     <title>Raja Ampat</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body
     <div class="container">
@@ -82,6 +83,10 @@
         </div>
       </div>
 
+      <button class="list-group-item-info center-block"><a href="http://www.epicodus.com"><h4>
+        Click here to book!
+      </h4></a></button>
+    </br>
       <div class="row">
         <div class="col-md-5 text-right pull-right">
           <blockquote>
