add README file

--- a/vacation.html
+++ b/vacation.html
@@ -23,12 +23,12 @@
           </p>
         </div>
       </div>
-      <div class="row">
-      <div class="col-md-6">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3>How Do You Get To Raja Ampat?</h3>
-        </div>
+      <div class="row match-my-cols">
+        <div class="col-md-6">
+          <div class="panel panel-info">
+            <div class="panel-heading">
+              <h3>How Do You Get To Raja Ampat?</h3>
+            </div>
           <div class="panel-body">
             <ul>
               <li>Fly to Sorong. Some flights will go via Makassar.</li>
@@ -51,6 +51,7 @@
             <li>Visiting Islands In Raja Ampat</li>
             <li>Visit Piaynemo – Stunning Small Islands In Raja Ampat</li>
             <li>Kayaking In Raja Ampat</li>
+            <li>test</li>
           </ul>
         </div>
       </div>
@@ -87,6 +88,8 @@
         Click here to book!
       </h4></a></button>
     </br>
+
+
       <div class="row">
         <div class="col-md-5 text-right pull-right">
           <blockquote>
@@ -94,18 +97,7 @@
           </blockquote>
         </div>
       </div>
-
-
-
-
-
-
-
-
-
-
-
-
+      
 
 
 
