--- a/vacation.html
+++ b/vacation.html
@@ -11,6 +11,8 @@
         <h1 class="text-center">Raja Ampat</h1>
       </div>
 
+      <img src="img/raja.jpg" alt="rajaampat" class="logo center-block">
+
       <blockquote>
       <h4 class="text-center">
       The Raja Ampat Islands are an Indonesian archipelago off the northwest tip of Bird’s Head Peninsula in West Papua. </h4></blockquote>
@@ -23,7 +25,7 @@
           </p>
         </div>
       </div>
-      <div class="row match-my-cols">
+      <div class="row">
         <div class="col-md-6">
           <div class="panel panel-info">
             <div class="panel-heading">
@@ -51,7 +53,6 @@
             <li>Visiting Islands In Raja Ampat</li>
             <li>Visit Piaynemo – Stunning Small Islands In Raja Ampat</li>
             <li>Kayaking In Raja Ampat</li>
-            <li>test</li>
           </ul>
         </div>
       </div>
@@ -97,7 +98,7 @@
           </blockquote>
         </div>
       </div>
-      
+
 
 
 
